# api_gateway/api/handlers/v1/register.go
@@ -2,14 +2,18 @@ package v1
 
 import (
 	"context"
+	"encoding/json"
+	"fmt"
 	"net/http"
 	"strings"
-	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/project/api_gateway/api/handlers/models"
-	"github.com/project/api_gateway/pkg/etc"
-	l "github.com/project/api_gateway/pkg/logger"
+	_ "github.com/microservice/api_gateway/api/docs"
+	"github.com/microservice/api_gateway/api/handlers/models"
+	"github.com/microservice/api_gateway/email"
+	pu "github.com/microservice/api_gateway/genproto/user"
+	"github.com/microservice/api_gateway/pkg/etc"
+	l "github.com/microservice/api_gateway/pkg/logger"
 )
 
 // Register register user
@@ -18,9 +22,10 @@ import (
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param request body models.RegisterUserModel true "register user"
-// @Success 200{object} models.User
-// @Router /v1/register[post]
+// @Param request body models.RegisterModel true "register user"
+// @Succes 200 {object}	models.StandartErrorModel
+// @Failure	500 {object} models.StandartErrorModel
+// @Router /users/register [post]
 func (h *handlerV1) Register(c *gin.Context) {
 
 	var body models.RegisterModel
@@ -33,22 +38,61 @@ func (h *handlerV1) Register(c *gin.Context) {
 		h.log.Error("eror while bind json", l.Error(err))
 		return
 	}
+
 	body.Email = strings.TrimSpace(body.Email)
 	body.Email = strings.ToLower(body.Email)
-	body.Password, err = etc.HashPassword(body.Password)
 
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, models.ResponseError{
-			Error: err,
-		})
-		h.log.Error("couldn't hash the password")
-		return
-	}
-	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
-	defer cancel()
-
-	existsEmail, err := h.serviceManager.UserService().CheckField(ctx, &user.CheckFieldReq{
+	existsEmail, err := h.serviceManager.UserService().CheckField(context.Background(), &pu.CheckFieldReq{
 		Field: "email",
 		Value: body.Email,
 	})
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed check username uniques ", l.Error(err))
+	}
+
+	if existsEmail.Exists {
+		c.JSON(http.StatusConflict, models.ResponseError{
+			Error: models.ErrorMessage{
+				Message: "mail already exists",
+			},
+		})
+		h.log.Error("this email already exists ", l.Error(err))
+	}
+
+	code := etc.GenerateCode(6)
+
+	msg := "Subject: User email verification\n Your verification code: " + code
+	err = email.SendEmail([]string{body.Email}, []byte(msg))
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"eroor": err.Error(),
+		})
+		return
+	}
+
+	body.Code = code
+
+	userBodyBte, err := json.Marshal(body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("error while marshal user body", l.Error(err))
+	}
+
+	fmt.Println(userBodyBte)
+
+	err = h.redis.SetWithTTL(body.Email, string(userBodyBte), 86400)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("error while redis user body", l.Error(err))
+	}
+
+	c.JSON(http.StatusAccepted, code)
 }
