# api_gateway/api/router.go
@@ -1,13 +1,14 @@
 package api
 
 import (
-	v1 "github.com/project/api_gateway/api/handlers/v1"
-	"github.com/project/api_gateway/config"
-	"github.com/project/api_gateway/pkg/logger"
-	"github.com/project/api_gateway/services"
+	v1 "github.com/microservice/api_gateway/api/handlers/v1"
+	"github.com/microservice/api_gateway/config"
+	"github.com/microservice/api_gateway/pkg/logger"
+	"github.com/microservice/api_gateway/services"
+	"github.com/microservice/api_gateway/storage/repo"
 
 	//"github.com/gin-contrib/cors"
-	_ "github.com/project/api_gateway/api/docs"
+	_ "github.com/microservice/api_gateway/api/docs"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
@@ -18,6 +19,7 @@ type Option struct {
 	Conf           config.Config
 	Logger         logger.Logger
 	ServiceManager services.IServiceManager
+	InMemoryStorage repo.RedisRepo
 }
 
 // @title           Swagger for user api
@@ -35,6 +37,7 @@ func New(option Option) *gin.Engine {
 		Logger:         option.Logger,
 		ServiceManager: option.ServiceManager,
 		Cfg:            option.Conf,
+		Redis: option.InMemoryStorage,
 	})
 
 	api := router.Group("/v1")
@@ -46,6 +49,10 @@ func New(option Option) *gin.Engine {
 	api.GET("/users/search", handlerV1.SearchUsers)
 	api.PUT("/user/:id", handlerV1.UpdateUser)
 	api.DELETE("/user/:id", handlerV1.DeleteUser)
+
+	// register
+	api.POST("/users/register", handlerV1.Register)
+
 
 	// posts
 	api.POST("/post", handlerV1.CreatePost)
